<resources>
    <string name="app_name">Just Weather</string>
    <string name="little_cloudy">Little cloudy</string>
    <string name="night">Night</string>
    <string name="plus_16">+0°</string>
    <string name="city">City</string>
    <string name="choose_your_city">Please, enter your city.</string>
    <string name="enter_the_name_of_the_city">Your city</string>
    <string name="ok">OK</string>
    <string name="settings">Settings</string>
    <string name="set_on_night_mode">Set on night mode</string>
    <string name="show_atmosphere_pressure">Show atmosphere pressure</string>
    <string name="windInfo">wind %1$s m/s</string>
    <string name="pressureInfo">%1$s mm Hg</string>
    <string name="or_choose_from_list">Or choose from list.</string>
    <string name="currTime">11:33</string>
    <string name="show_temperature_feels_like">Show temperature feels like</string>
    <string name="feels_like_temp">feels like: %s%2$s°</string>
    <string name="HintTextInputEditText">Enter the name of the city</string>
    <string name="setOnBtnOkEnterCityToast">Unacceptable city name</string>
    <string name="toDeleteCity">To delete city from list click here</string>
    <string name="delete">Delete</string>
    <string name="delete_city">Delete city?</string>
    <string name="cityDeleted">City deleted</string>
    <string name="pleaseChooseCityFirst">Please, choose city first</string>
    <string name="about">About</string>
    <string name="appName">Just Weather</string>
    <string name="version">Version 1.5 </string>

    <string-array name="cities">
        <item>Moscow</item>
        <item>Saint Petersburg</item>
        <item>Paris</item>
        <item>London</item>
        <item>Berlin</item>
        <item>New York</item>
        <item>Bangor</item>
        <item>Tokyo</item>
        <item>Beijing</item>
    </string-array>

    <string-array name="days">
        <item>Mn</item>
        <item>Tu</item>
        <item>Wd</item>
        <item>Th</item>
        <item>Fr</item>
    </string-array>

    <string-array name="daysTemp">
        <item>+0</item>
        <item>+0</item>
        <item>+0</item>
        <item>+0</item>
        <item>+0</item>
        <item>+0</item>
        <item>+0</item>
        <item>+0</item>
    </string-array>

    <string-array name="hours">
        <item>00.00</item>
        <item>03.00</item>
        <item>06.00</item>
        <item>09.00</item>
        <item>12.00</item>
        <item>15.00</item>
        <item>18.00</item>
        <item>21.00</item>
    </string-array>

    <string-array name="weatherState">
        <item>Rain</item>
        <item>Clear</item>
        <item>Variable cloudiness</item>
        <item>Mainly cloudy</item>
        <item>Cloudy with clearings</item>
        <item>Storm</item>
    </string-array>

    <string-array name="iconsId">
        <item>cloudy_rainy_not_windy</item>
        <item>sunny_not_cloudy</item>
        <item>cloudy_icon</item>
        <item>cloudy_icon</item>
        <item>little_cloudy_sunny</item>
        <item>storm_cloudy</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="city_not_found" >City not found, please try again.</string>
    <string name="menu_home">Home</string>
    <string name="menu_choose_city">Choose city</string>
    <string name="menu_about">About</string>
    <string name="read_wiki">Wikipedia</string>
    <string name="alex_mukha_2020">© Alex Mukha, 2020</string>
    <string name="pleaseChooseCotyFirst">Please, choose city first</string>
    <string name="connection_failed">Connection failed, please check your connection.</string>
    <string name="sorry_alert_dialog">Sorry, I can\'t find weather forecast.</string>
    <string name="update">update: %1$s</string>
    <string name="alfabetical_sorting">alphabetical sorting</string>
    <string name="sorting_by_date">sorting by date</string>
    <string name="broadcastReceiver_internet_conn_failed">Internet connection failed</string>
    <string name="broadcastReceiver_check_internet">Please, check your connection</string>
    <string name="broadcastReceiver_wifi_conn_failed">Wi-fi connection failed</string>
    <string name="broadcastReceiver_check_wifi">Please, check your connection</string>
    <string name="not_found">Not found</string>
    <string name="provided_by_open_weather_map">Forecast: Open Weather Map</string>
    <string name="alert_message">Weather in %1$s not found. Please, try again or use search by name.</string>
    <string name="places_api_key">AIzaSyCsdcjzPbl1ShsdyDF3ssaAEomQAOkC7L0</string>
    <string name="m_s">\ m/s</string>
    <string name="N">\u0020N</string>
    <string name="S">\u0020S</string>
    <string name="I">\u0020I</string>
    <string name="W">\u0020W</string>
    <string name="NI">\u0020NI</string>
    <string name="NW">\u0020NW</string>
    <string name="SI">\u0020SI</string>
    <string name="SW">\u0020SW</string>
</resources>