<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single"
        android:id="@+id/main_items">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:checked="true"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_choose_city"
            android:icon="@drawable/ic_baseline_not_listed_location_24"
            android:title="@string/menu_choose_city" />
    </group>
    <group
        android:checkableBehavior="single"
        android:id="@+id/additional_items">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/menu_about" />
    </group>
</menu>